<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">RealBeauty with Allie</string>
  <string name="content_desc_map_salon_location">Map of salon location</string>
  <string name="menu_action_facebook">Facebook</string>
  <string name="menu_action_phone">Phone Me</string>
  <string name="contact_details_address_title">Address</string>
  <string name="contact_details_address">Kingsway Court, Queens Gardens\nFirst Avenue\nHove\nBN3 3LP</string>
  <string name="contact_details_tel_title">Tel</string>
  <string name="contact_details_tel">07912176997</string>
  <string name="contact_details_email_title">Email</string>
  <string name="contact_details_email">realbeautywithallie\n@hotmail.co.uk</string>
  <string name="contact_details_booking_info_1">You can book your appointments by calling, texting, emailing or Facebook me!</string>
  <string name="contact_details_booking_info_2">I offer a wide range of treatments to suit everybody.</string>
  <string name="contact_details_opening_hours_title">My opening hours are</string>
  <string name="contact_details_opening_hours_days_1">Mon-Thurs</string>
  <string name="contact_details_opening_hours_days_2">Fri-Sat</string>
  <string name="contact_details_opening_hours_times_1">10am-6pm</string>
  <string name="contact_details_opening_hours_times_2">10am-5pm</string>
  <string name="contact_details_opening_hours_subtitle">Late nights available</string>
  <string name="contact_details_opening_hours_days_3">Mon-Thurs</string>
  <string name="contact_details_opening_hours_times_3">6pm-9pm</string>
  <string name="navigate">Navigate</string>

</resources>